tests/invalid-types/src/wrap/index.ts
import {
  Args_boolMethod,
  Args_intMethod,
  Args_uIntMethod,
  Args_bytesMethod,
  Args_arrayMethod
} from "./Module";
export {
  Args_boolMethod,
  Args_intMethod,
  Args_uIntMethod,
  Args_bytesMethod,
  Args_arrayMethod
};
